src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
	font-family: 'Oswald';
	src: url('/Oswald.ttf');
	font-weight: normal;
	font-style: normal;
}

html {
	font-family: 'Oswald';
	@apply text-gold bg-black;
}

